--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ A personal website to showcase projects and resume.</p>
 
     <section id="resume">
       <h2>Resume</h2>
-      <p><a href="resume.pdf" target="_blank" class="btn">Download Resume</a></p>
+      <p><a href="Shaik Rasol Ahmad.pdf" target="_blank" class="btn">Download Resume</a></p>
     </section>
 
     <footer>
