--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <section id="about">
       <h2>About Me</h2>
-      <p>Hello! I'm a full-stack web developer with experience in building dynamic websites using modern tools and technologies.</p>
+      <p>Hello! I'm a web developer with experience in building dynamic websites using modern tools and technologies.</p>
     </section>
 
     <section id="projects">
